<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.administrator.popularmovies.activity.DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:textSize="30sp"
            android:background="@color/coloBackgroundDark"
            android:textColor="@color/colorText"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/iv_poster_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie_poster_desc"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            app:layout_constraintLeft_toRightOf="@+id/iv_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            app:layout_constraintLeft_toRightOf="@+id/iv_poster_detail"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_runtime"
            app:layout_constraintLeft_toRightOf="@+id/iv_poster_detail"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/mark_favorite"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/mark_favorite"
            android:textAlignment="center"
            android:background="@color/coloBackgroundLight"
            app:layout_constraintLeft_toRightOf="@+id/iv_poster_detail"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average" />

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster_detail"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.50" />

        <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_synopsis">
        </View>

        <TextView
            android:id="@+id/tv_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailers"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/divider"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_trailers"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:srcCompat="@android:drawable/ic_media_play" />

        <TextView
            android:id="@+id/trailer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailer1"
            app:layout_constraintLeft_toLeftOf="@id/imageButton"
            app:layout_constraintTop_toTopOf="@id/tv_trailers"
            android:layout_marginTop="47dp"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"/>

        <View
            android:id="@+id/divider1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton">
        </View>

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/divider1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:srcCompat="@android:drawable/ic_media_play" />

        <TextView
            android:id="@+id/trailer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailer2"
            app:layout_constraintLeft_toLeftOf="@id/imageButton1"
            app:layout_constraintTop_toTopOf="@id/divider1"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp">
        </View>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
